--- a/owm/templates/owm/finance_ozon.html
+++ b/owm/templates/owm/finance_ozon.html
@@ -43,7 +43,9 @@ function input() {
   });
 </script>
 
-
+header_data {{ header_data }}
+    <br><br>
+    all_totals {{ all_totals }}
 <div class="position-relative mb-17">
     <div class="overlay overlay-show">
         <div class="bgi-no-repeat bgi-position-center bgi-size-cover card-rounded min-h-250px" style="background-image:url('/media/owm/fin_owm.jpg')">
@@ -67,7 +69,7 @@ function input() {
 </div>
 
 <div class="row gy-5 gx-xl-10">
-    <!--begin::Col-->
+
     <div class="col-sm-6 col-xl-2 mb-xl-10">
 
         <div class="card h-lg-100">
@@ -95,7 +97,6 @@ function input() {
             <!--end::Body-->
         </div>
         </div>
-
 
     <div class="col-sm-6 col-xl-2 mb-xl-10">
 <!--begin::Card widget 2-->
@@ -130,9 +131,7 @@ function input() {
 </div>
 <!--end::Card widget 2-->
      </div>
-    <!--end::Col-->
 
-    <!--begin::Col-->
     <div class="col-sm-6 col-xl-2 mb-xl-10">
 
 <!--begin::Card widget 2-->
@@ -175,9 +174,7 @@ function input() {
 
 
      </div>
-    <!--end::Col-->
 
-    <!--begin::Col-->
     <div class="col-sm-6 col-xl-2 mb-xl-10">
         <div class="card h-lg-100">
     <!--begin::Body-->
@@ -206,15 +203,31 @@ function input() {
 
         <!--begin::Badge-->
         <span class="badge badge-light-success fs-base">
-                            <i class="ki-duotone ki-arrow-up fs-5 text-success ms-n1"><span class="path1"></span><span class="path2"></span></i>
-
-            2.1%
+                            <i class="ki-duotone ki-arrow-up fs-5 text-success ms-n1"><span class="path1"></span><span class="path2"></span></i>-
         </span>
         <!--end::Badge-->
     </div>
     <!--end::Body-->
 </div>
         </div>
+
+    <div class="col-sm-6 col-xl-2 mb-5 mb-xl-10">
+        <div class="card h-lg-100">
+            <div class="card-body d-flex justify-content-between align-items-start flex-column">
+                <div class="m-0">
+                    <i class="fa-regular fa-thumbs-down fs-2hx text-gray-600"><span class="path1"></span><span class="path2"></span></i>
+                </div>
+                <div class="d-flex flex-column my-7">
+                    <span class="fw-semibold fs-3x text-gray-800 lh-1 ls-n2">{{ all_totals.all_return_total }}</span>
+                    <div class="m-0"><span class="fw-semibold fs-6 text-gray-500">Возвраты товара</span>
+                    </div>
+                </div>
+                <span class="badge badge-light-success fs-base">
+                    <i class="ki-duotone ki-arrow-up fs-5 text-success ms-n1"><span class="path1"></span><span class="path2"></span></i>-
+                </span>
+            </div>
+        </div>
+    </div>
 
     <div class="col-sm-6 col-xl-2 mb-5 mb-xl-10">
         <div class="card h-lg-100">
@@ -236,23 +249,6 @@ function input() {
         </div>
     </div>
 
-    <div class="col-sm-6 col-xl-2 mb-5 mb-xl-10">
-        <div class="card h-lg-100">
-            <div class="card-body d-flex justify-content-between align-items-start flex-column">
-                <div class="m-0">
-                    <i class="ki-duotone ki-abstract-26 fs-2hx text-gray-600"><span class="path1"></span><span class="path2"></span></i>
-                </div>
-                <div class="d-flex flex-column my-7">
-                    <span class="fw-semibold fs-3x text-gray-800 lh-1 ls-n2">-</span>
-                    <div class="m-0"><span class="fw-semibold fs-6 text-gray-500">-</span>
-                    </div>
-                </div>
-                <span class="badge badge-light-success fs-base">
-                    <i class="ki-duotone ki-arrow-up fs-5 text-success ms-n1"><span class="path1"></span><span class="path2"></span></i>-
-                </span>
-            </div>
-        </div>
-    </div>
 </div>
 <br><br><br>
 <!--begin::Accordion-->
