--- a/owm/templates/owm/finance_ozon.html
+++ b/owm/templates/owm/finance_ozon.html
@@ -46,6 +46,7 @@ function input() {
 header_data {{ header_data }}
     <br><br>
     all_totals {{ all_totals }}
+    <!--Шапка-->
 <div class="position-relative mb-17">
     <div class="overlay overlay-show">
         <div class="bgi-no-repeat bgi-position-center bgi-size-cover card-rounded min-h-250px" style="background-image:url('/media/owm/fin_owm.jpg')">
@@ -67,7 +68,7 @@ header_data {{ header_data }}
     </div>
     <!--end::Heading-->
 </div>
-
+<!--Табличик-->
 <div class="row gy-5 gx-xl-10">
 
     <div class="col-sm-6 col-xl-2 mb-xl-10">
