--- a/owm/templates/owm/postavka_ozon.html
+++ b/owm/templates/owm/postavka_ozon.html
@@ -106,8 +106,8 @@ header_data {{ header_data }}
         <!--end::Wrapper-->
     </div>
 
-    <a href="{{ path }}" class="btn btn-primary btn-sm" style="width: 150px;">
-        <i class="fa-solid fa-download fs-1"><span class="path1"></span><span class="path2"></span><span class="path3"></span><span the="path4"></span></i>
+<a href="{{ path|urlencode }}" class="btn btn-primary btn-sm" style="width: 150px;" target="_blank">
+        <i class="fa-solid fa-download fs-1"><span class="path1"></span><span class="path2"></span><span class="path3"></span><span class="path4"></span></i>
         Скачать xlsx файл для поставки FBO
     </a>
     <br>
