--- a/owm/templates/owm/sidebar_menu.html
+++ b/owm/templates/owm/sidebar_menu.html
@@ -8,14 +8,11 @@
 <a href="{% url 'create' %}">Api ключи</a><br><br>
 
 <!--begin::Menu-->
-<div class="menu menu-rounded menu-column menu-title-gray-700 menu-icon-gray-500 menu-arrow-gray-500 menu-bullet-gray-500 menu-arrow-gray-500 menu-state-bg fw-semibold w-250px" data-kt-menu="true">
+<div style="padding-left: -60px;" class="menu menu-rounded menu-column menu-title-gray-700 menu-icon-gray-500 menu-arrow-gray-500 menu-bullet-gray-500 menu-arrow-gray-500 menu-state-bg fw-semibold" data-kt-menu="true">
     <!--begin::Menu item-->
     <div class="menu-item menu-sub-indention menu-accordion" data-kt-menu-trigger="click">
         <!--begin::Menu link-->
         <a href="#" class="menu-link py-3">
-            <span class="menu-icon">
-                <i class="ki-duotone ki-chart-simple-2 fs-3"><span class="path1"></span><span class="path2"></span><span class="path3"></span><span class="path4"></span></i>
-            </span>
             <span class="menu-title">Example Link</span>
             <span class="menu-arrow"></span>
         </a>
@@ -122,66 +119,6 @@
     </div>
     <!--end::Menu item-->
 
-    <!--begin::Menu item-->
-    <div class="menu-item menu-link-indention menu-accordion" data-kt-menu-trigger="click">
-        <!--begin::Menu link-->
-        <a href="#" class="menu-link py-3">
-            <span class="menu-icon">
-                <i class="ki-duotone ki-calendar-2 fs-3"><span class="path1"></span><span class="path2"></span><span class="path3"></span><span class="path4"></span><span class="path5"></span></i>
-            </span>
-            <span class="menu-title">Example Link</span>
-            <span class="menu-arrow"></span>
-        </a>
-        <!--end::Menu link-->
-
-        <!--begin::Menu sub-->
-        <div class="menu-sub menu-sub-accordion pt-3">
-            <!--begin::Menu item-->
-            <div class="menu-item">
-                <a href="#" class="menu-link py-3 active">
-                    <span class="menu-bullet">
-                        <span class="bullet bullet-dot"></span>
-                    </span>
-                    <span class="menu-title">Example Link</span>
-                </a>
-            </div>
-            <!--end::Menu item-->
-
-            <!--begin::Menu item-->
-            <div class="menu-item">
-                <a href="#" class="menu-link py-3">
-                    <span class="menu-bullet">
-                        <span class="bullet bullet-dot"></span>
-                    </span>
-                    <span class="menu-title">Example Link</span>
-                </a>
-            </div>
-            <!--end::Menu item-->
-
-            <!--begin::Menu item-->
-            <div class="menu-item">
-                <a href="#" class="menu-link py-3">
-                    <span class="menu-bullet">
-                        <span class="bullet bullet-dot"></span>
-                    </span>
-                    <span class="menu-title">Example Link</span>
-                </a>
-            </div>
-            <!--end::Menu item-->
-        </div>
-        <!--end::Menu sub-->
-    </div>
-    <!--end::Menu item-->
-
-    <!--begin::Menu item-->
-    <div class="menu-item">
-        <a href="#" class="menu-link py-3">
-            <span class="menu-icon">
-                <i class="ki-duotone ki-gear fs-3"><span class="path1"></span><span class="path2"></span></i>
-            </span>
-            <span class="menu-title">Example Link</span>
-        </a>
-    </div>
     <!--end::Menu item-->
 </div>
 <!--end::Menu-->
